src/objects/Performance_Tests__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Performances / Tests</relationshipLabel>
        <relationshipName>Performances_Tests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course_Account</label>
        <referenceTo>Course_Account__c</referenceTo>
        <relationshipLabel>Performances / Tests</relationshipLabel>
        <relationshipName>Performances_Tests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Test__c</fullName>
        <label>Date of Test</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Topic__c</fullName>
        <label>Test Topic</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Marks__c</fullName>
        <label>Total Marks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Performance / Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Performance / Tests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performances / Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>